#SFML path varies depending upon if we're building the full SDK or just sample directory
if (ASTRA_SDK_BUILD)
  if (ASTRA_OSX)
      set(SFML_PATH "${CMAKE_SOURCE_DIR}/samples-aux/thirdparty-bin/osx/sfml-2.3.2-min/")
  elseif(ASTRA_WINDOWS)
      if (ASTRA_64)
          set(BIT_DIR "64")
      else()
          set(BIT_DIR "32")
      endif()
      set(SFML_PATH "${CMAKE_SOURCE_DIR}/samples-aux/thirdparty-bin/${VS_DIR}/sfml-min-${BIT_DIR}/")
  else()
      set(SFML_PATH "SFML_ROOT-UNDEFINED")
  endif()
else()
  if (ASTRA_OSX)
      set(SFML_PATH "${CMAKE_SOURCE_DIR}/thirdparty/sfml-2.3.2-min/")
  elseif(ASTRA_WINDOWS)
      if (ASTRA_64)
          set(BIT_DIR "64")
      else()
          set(BIT_DIR "32")
      endif()
      set(SFML_PATH "${CMAKE_SOURCE_DIR}/${VS_DIR}/thirdparty/sfml-min-${BIT_DIR}/")
  else()
      set(SFML_PATH "SFML_ROOT-UNDEFINED")
  endif()
endif()

set(SFML_ROOT "${SFML_PATH}" CACHE INTERNAL "Root path for SFML library" FORCE)
message("SFML_ROOT: ${SFML_ROOT}")

add_subdirectory(SimpleDepthViewer-SFML)
add_subdirectory(SimpleHandViewer-SFML)
add_subdirectory(SimpleStreamViewer-SFML)
add_subdirectory(SimpleColorViewer-SFML)
add_subdirectory(MultiSensorViewer-SFML)
if(ASTRA_SKELETON)
    add_subdirectory(SimpleSkeletonViewer-SFML)
endif()
